# CPP-Coursework

./: .gitignore
Demo/: CMakeLists.txt  SDL2_App
Demo/src/: DemoA.cpp  DemoA.h  MyObject.cpp  MyObject.h  MyTileManager.cpp  MyTileManager.h  SimpleDemo.cpp  mainfunction.cpp
Docs/: Coursework 1 documentation.docx  Coursework 2  DOCS.docx  Coursework 2 plan.docx  Lose.xcf  Menu.xcf  Plate.xcf  STATE DOC.txt  Self notes.txt  StartGame.xcf  Win.xcf  a.tsx  gradient.html  untitled.tiled-session  walls_and_floor.xcf  ~$ursework 1 documentation.docx  ~$ursework 2 plan.docx  ~WRL3538.tmp
Original source/CPPCoursework2021-v102/: CMakeLists.txt
Project-CW1/: CMakeLists.txt  Readme.MD  build_and_run.sh
Project-CW1/Debug/: BouncingBall.sbr  BouncingBallMain.sbr  DisplayableObject.sbr  DraggingDemo.sbr  FlashingDemo.sbr  FontManager.sbr  ImageMappingDemo.sbr  MazeDemoMain.sbr  MazeDemoObject.sbr  MazeDemoTileManager.sbr  SimpleDemo.sbr  SimpleImage.sbr  StarfieldDemo.sbr  TileManager.sbr  ZoomingDemo.sbr  mainfunction.sbr
Project-CW1/Debug/Coursewo.63F64093.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CourseworkBase2020.lastbuildstate
Project-CW1/ProjectSrc/: Bird.cpp  Bird.h  Pipe.cpp  Pipe.h  PipePair.cpp  PipePair.h  TileMap.cpp  TileMap.h  cw1_main.cpp  cw1_main.h
Project-CW1/src/: mainfunction.cpp
Project-CW2/: CREDITS.txt
Project-CW2/Release/: CourseworkBase.vcxproj.FileListAbsolute.txt  CourseworkBase2020.exe.recipe  CourseworkBase2020.ilk
Project-CW2/src/: AI.cpp  AI.h  Collider.cpp  Collider.h  CourseworkBase.vcxproj  Enemy.cpp  Enemy.h  (+37 more)
(+24 files in other folders)
